--- a/blender/buttons/index.html
+++ b/blender/buttons/index.html
@@ -13,10 +13,10 @@
             .gif{margin: 8px 8px 0 0}
         </style></head>
 
-    <body><header>
-        <h1>buttons</h1></header>
-        <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
-        <div class="main">
+    <body>
+        <h1>buttons</h1>
+        <nav class="top"><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
+        <main>
             <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p><br>
                 <p>One with cubes walking:</p><img src="walking.gif" class="gif">
                 <br><br>
@@ -49,5 +49,5 @@
             <br><br>
             <p>And the icosphere again but in an 88x31 format:</p><img src="glass3.gif" class="gif">
         <br><br>
-    </div></body>
+    </main></body>
 </html>
