--- a/blender/glass/index.html
+++ b/blender/glass/index.html
@@ -12,10 +12,10 @@
         <title>blender/glass</title><style>
         </style></head>
 
-        <body><header>
-            <h1>glass</h1></header>
-            <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
-        <div class="main">
+        <body>
+            <h1>glass</h1>
+            <nav class="top"><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
+        <main>
             <p>A bunch of things exploring glass and refraction; with 3 name series things.</p>
         <h2 id="basic">basic</h2>
         <p>The first 6 images in the basics were. too basic.</p><br>
@@ -85,5 +85,5 @@
             <p>14. A bunch of nested cyllinders. A bit too much reflection</p></div>
             <br>
         <br><br>
-    </div></body>
+        </main></body>
 </html>
