--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -11,10 +11,10 @@
         <link rel="icon" type="image/x-icon" href="/website/blender/cube.gif">
         <title>blender/icossymetry</title></head>
 
-        <body><header>
-            <h1>icossymetry</h1></header>
-            <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
-        <div class="main">
+        <body>
+            <h1>icossymetry</h1>
+            <nav class="top"><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
+        <main>
         <p>This whole thing started when i wanted to recreate the floor pattern in this iconic maths video, 
         <a href="https://www.youtube.com/watch?v=4aN6vX7qXPQ">Not Knot</a> by the Geometry Center.
         I knew i couldn't really recreate it bc it was a hyperbolic tiling, but i still tried to do
@@ -243,5 +243,5 @@
             TOO good...
         </p></div>
         <br>
-    </div></body>
+    </main></body>
 </html>
