--- a/blender/index.html
+++ b/blender/index.html
@@ -14,18 +14,20 @@
             #cmyk:hover{background-color: #ff0060}
             h1::before{content:'→ '}
         </style></head>
-    <body><header>
-        <h1>blender renders</h1></header>
-        <nav><a href="../home">home</a></nav>
-    <div class="main">
+    <body>
+        <h1>blender renders</h1>
+        <nav class="top"><a href="../home">home</a></nav>
+    <main>
         
         <p>Hi! These are (most) of the things i've done in blender over the last while.
             <br>The original files are 1920x1080 (bigger even than my own display lol), so they're 400x225 to save your bandwidth at least a little bit.
             <br>Also these images (and this site) are licensed under GPLv3.
             <br>Most of these series weren't made in one sitting, mostly over months of suddenly wanting to do that one thing again.
             <br>You can see how many images each page has next to the link, so if your internet isn't too good, maybe these won't be the fastest loading times...</p><br>
-        <h3><a href="icossymetry">icossymetry (40)</a></h3><h3><a href="glass">glass (21)</a></h3><h3><a id='cmyk' href="cmyk">cmyk (8)</a></h3><h3><a href="buttons">buttons (10)</a></h3>
-    
-        <br><br><br><img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 0; max-width: 100%; width: auto"></div></body>
+        <nav>
+            <h3><a href="icossymetry">icossymetry (40)</a></h3><h3><a href="glass">glass (21)</a></h3><h3><a id='cmyk' href="cmyk">cmyk (8)</a></h3><h3><a href="buttons">buttons (10)</a></h3>
+        </nav>
+        <br><br><br><img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 0; max-width: 100%; width: auto">
+    </main></body>
 
 </html>
