--- a/blender/cmyk/index.html
+++ b/blender/cmyk/index.html
@@ -13,10 +13,10 @@
             body{--color: #ff0060}
         </style></head>
 
-        <body><header>
-            <h1>cmyk</h1></header>
-            <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
-        <div class="main">
+        <body>
+            <h1>cmyk</h1>
+            <nav class="top"><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
+        <main>
             <p>A bunch of renders that i wanted to make bc i love the aesthetic of CMYK!</p><br>
         <div class="image"><img src="cmyk1.png">
             <p>1. 3 cubes, cyan yellow and magenta, illuminated from all sides.</p></div>
@@ -49,5 +49,5 @@
             <p>8. And here, the cyan, magenta and yellow lines are emmissive and come colliding to the ground.</p></div>
             <br>
         <br><br>
-    </div></body>
+    </main></body>
 </html>
