fixed some index lilnks

--- a/doodles/15/index.html
+++ b/doodles/15/index.html
@@ -11,7 +11,7 @@
         </style></head>
     <body>
         <h1>15</h1>
-        <nav class="top"><a href="../index">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="../">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
             <p>A notebook when i started doing anti-racism learning and drawing many black faces. at once. for once.</p>
         <div id="drawings">
