--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -11,7 +11,7 @@
         </style></head>
         <body><header>
             <h1>ibisPaint</h1></header>
-            <nav class="top"><a href="../index">back to doodles</a></nav>
+            <nav class="top"><a href="../">back to doodles</a></nav>
         <main>
         <p>digital drawings made on my phone because i can't afford
             a drawing tablet oops<br>coincided a bit with anti-racism work so there's 
