--- a/home.html
+++ b/home.html
@@ -32,19 +32,22 @@
             nav div{background-color: var(--text); height: 1px; 
                 width: 50%; margin: 0 auto; z-index: -1;}
 
-            #about:hover{background-color: #f0f0f0; color: #2b5cb1}
-            #doodles:hover{background-color: #e0e0e0; color: #202020}
+            #about:hover{background-color: #f0f0f0; color: #2b5cb1;
+                outline-color: #f0f0f0;}
+            #doodles:hover{background-color: #e0e0e0; color: #202020;
+                outline-color: #e0e0e0;}
             #bookmarks:hover{background-color: #0d0542; color: #ffb135; 
                 outline-color: #ffb135;}
             #blender:hover{background-color: #498cff10; color: var(--text);
                 outline-color: #498cff;}
-            #words:hover{background-color: #efd9b3; color: #2B2008}
+            #words:hover{background-color: #ebddd2; color: #1a1613;
+                outline-color: #ebddd2;}
             #buttons:hover{background-color: #b8cadf; color: #001a40;
                 outline-color: #b8cadf;}
             #misc:hover{background-color: #15c40510; color: var(--text); 
                 outline-color: #15c405;}
             #sitelog:hover{background-color: #ffa90010; color: #ffa900; 
-            outline-color: #ffa900}
+                outline-color: #ffa900}
 
             .divider{background-color: var(--text)}
 
