--- a/words/index.html
+++ b/words/index.html
@@ -24,19 +24,19 @@
             <div id="smaller texts">
                 <h2>smaller</h2>
                 <ul>
-                    <li><a href="ona">ona</a></li>
-                    <li><a href="concrete">concrete</a></li>
-                    <li><a href="nwiptcl">nwiptcl</a></li>
-                    <li><a href="untitled">untitled</a></li>
+                    <li><a href="ona">ona</a> (41)</li>
+                    <li><a href="concrete">concrete</a> (9)</li>
+                    <li><a href="nwiptcl">nwiptcl</a> (32)</li>
+                    <li><a href="untitled">untitled</a> (87)</li>
                 </ul>
             </div>
             <div id="longer texts">
                 <h2>longer</h2>
                 <ul>
-                    <li><a href="jan">jan</a></li>
-                    <li><a href="len_pi_laso_telo">len pi laso telo</a></li>
+                    <li><a href="jan">jan</a> (308)</li>
+                    <li><a href="len-pi-laso-telo">len pi laso telo</a> (647)</li>
                     <li><a href="racism">nasin ike pi poki kule / racism</a> (863 + 1091)</li>
-                    <li><a href="diary">diary</a></li>
+                    <li><a href="diary">diary</a> (690)</li>
                 </ul>
             </div>
         </nav>
