--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                 outline-color: #ffb135;}
             #blender:hover{background-color: #498cff10; color: var(--text);
                 outline-color: #498cff;}
-            #words:hover{background-color: #ebddd2; color: #1a1613;
+            #words:hover{background-color: #ebddd2; color: #6b00f7;
                 outline-color: #ebddd2;}
             #buttons:hover{background-color: #b8cadf; color: #001a40;
                 outline-color: #b8cadf;}
@@ -86,6 +86,7 @@
                 <div></div>
                 <a id="blender" href="blender"><b>→</b> blender</a>
                 <a id="doodles" href="doodles/"><b>→</b> doodles</a>
+                <a id="words" href="words/"><b>→</b> words</a>
                 <a id="misc" href="misc/"><b>→</b> misc</a>
                 <div></div>
                 <a id="buttons" href="buttons/"><b>→</b> buttons</a>
