re-added old site welcome text

--- a/home.html
+++ b/home.html
@@ -64,9 +64,15 @@
     <body>
         <main>
             <div id="info">
-                <p>Hello! Welcome to this website, we're under our... 7th redesign. Hopefully this one stays.<br>
-                    There's not much here right now, we're pretty much perpetually under construction, so there'll
-                    (hopefully) be more stuff here soon. If you wanna talk to us, some links are below!
+                <p>
+
+                    Hi! Welcome to my bit of the web where i put stuff i like, stuff i do 
+                    and other things too. (hey that rhymed)<br>
+                    I... don't know how to explain or express this place exactly. 
+                    It's got places you can go that have stuff in them you might want to look at. Basically.<br>
+                    Making this website has been a very fun (and challenging (and at times painful)) 
+                    experience, including learning html and css, and i hope you like having a gander at 
+                    it, however small this site may be.
                 </p><br>
                 <details><summary>links</summary>
                     <ul>
