--- a/home.html
+++ b/home.html
@@ -65,13 +65,12 @@
         <main>
             <div id="info">
                 <p>
-
                     Hi! Welcome to my bit of the web where i put stuff i like, stuff i do 
                     and other things too. (hey that rhymed)<br>
                     I... don't know how to explain or express this place exactly. 
                     It's got places you can go that have stuff in them you might want to look at. Basically.<br>
-                    Making this website has been a very fun (and challenging (and at times painful)) 
-                    experience, including learning html and css, and i hope you like having a gander at 
+                    Making this website has been a very fun experience (with 7 redesigns now iirc), 
+                    including learning html and css, and i hope you like having a gander at 
                     it, however small this site may be.
                 </p><br>
                 <details><summary>links</summary>
