--- a/mante.html
+++ b/mante.html
@@ -28,13 +28,14 @@
                     <li><b>the motan:</b> 54 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
                     <li><b>jan Seli:</b> 15 changes</li>
-                    <li><b>tabby:</b> 13 changes</li>
+                    <li><b>tabby:</b> 14 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2023</h2><ul id="name list 2023">
+            <li>15/1:<b> outtabbied again </b><span class="name">tabby</span></li><br>
             <li>2/1:<b> autism land </b><span class="name">mu Temi</span></li><br>
             <li>1/1:<b> happy 40th, 1984 </b><span class="name">the motan</span></li><br>
         </ul><h2>2022</h2><ul id="name list 2022">
