--- a/doodles/index.html
+++ b/doodles/index.html
@@ -9,10 +9,11 @@
                 --text: #202020;
                 --color: #606060}
             h1::before, h1::after{content: ""}
-            h3{width: fit-content; display: inline;}
-            h3 a{font-size: 1.5rem; padding: 8px 16px 4px; 
-                display: inline-block; text-decoration: none}
-            #_15:hover {
+            #notebooks a{width: fit-content; display: inline;
+            font-size: 1.5rem; padding: 8px 16px 4px; 
+                display: inline-block; text-decoration: none;
+            font-weight:bold}
+            #_15:hover, #_16:hover {
                 background-color: #ccb184;
                 color: #130e02;}
             #ibispaint:hover {
@@ -29,7 +30,7 @@
             Below, the numbers in the {curly brackets} indicate how many pictures are in each page (400px wide), so
             not ideal if your bandwidth isn't that fast.<br>
             If you wanna ask about the meaning of a drawing, you can ask on discord!
-        </p><br><nav>
-        <h3><a href="15" id="_15">15 {33}</a></h3><h3><a href="ibispaint/" id="ibispaint">ibisPaint {6}</a></h3>
+        </p><br><nav id="notebooks">
+        <a href="15" id="_15">15 {33}</a><a href="16" id="_16">16 {32}</a><a href="ibispaint/" id="ibispaint">ibisPaint {6}</a>
         </nav><main></body>
 </html>
