added weather and updated mante

--- a/mante.html
+++ b/mante.html
@@ -19,22 +19,29 @@
     <main>
         <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
-                Also this is accurate to [as long as i can keep updating this]<br>
+                Also this is accurate to [25/1/2024] {as long as i can keep updating this and/or discord doesn't implode and mante still stands}<br>
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 135 changes</li>
+                    <li><b>kulupu ko:</b> 137 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>the motan:</b> 54 changes</li>
+                    <li><b>the motan:</b> 57 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
-                    <li><b>jan Seli:</b> 15 changes</li>
-                    <li><b>tabby:</b> 14 changes</li>
+                    <li><b>jan Seli:</b> 16 changes</li>
+                    <li><b>tabby:</b> 15 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2023</h2><ul id="name list 2023">
+            <li>24/1:<b> <span style="cursor:help" title="home of The Machine">The Bureau</span> </b><span class="name">tabby</span></li><br>
+            <li>21/1:<b> los papas fritos </b><span class="name">kulupu ko</span></li><br>
+            <li>21/1:<b> los papas fritas </b><span class="name">kulupu ko</span></li><br>
+            <li>21/1:<b> ma ijo pi ante ante </b><span class="name">the motan</span></li><br>
+            <li>21/1:<b> ma ante pi ijo ante </b><span class="name">jan Seli</span></li><br>
+            <li>17/1:<b> get tabbied loser </b><span class="name">the motan</span></li><br>
+            <li>16/1:<b> intabbied again </b><span class="name">the motan</span></li><br>
             <li>15/1:<b> outtabbied again </b><span class="name">tabby</span></li><br>
             <li>2/1:<b> autism land </b><span class="name">mu Temi</span></li><br>
             <li>1/1:<b> happy 40th, 1984 </b><span class="name">the motan</span></li><br>
