--- a/misc/folder/other/weather/index.html
+++ b/misc/folder/other/weather/index.html
@@ -88,7 +88,7 @@
             <section><details><summary><h2>TODAY          (<span id="day0"></span>)</h2></summary>
             <p class="maxmin">Max: <span id="max0"></span>°C | Min: <span id="min0"></span>°C</p>
             <table id="hourly0"></table>
-            <details class="temp"><summary>Temperatures</summary>
+            <details class="temp"><summary>Temperatures (°C)</summary>
                 <table id="temp0">
                     <tr><th>time</th><th>temp.</th><th>feel</th><th>heat index</th><th>dew pt.</th></tr>
                 </table></details>
@@ -101,7 +101,7 @@
                 <table id="wind0">
                     <tr><th>time</th><th>speed</th><th colspan="2" style="padding-right: 0">direction</th><th>gust</th><th>chill</th></tr>
                 </table></details>
-            <details><summary>Chances</summary>
+            <details><summary>Chances (%)</summary>
             <table id="chance0">
                 <tr><th>time</th><th>rain</th><th>overcast</th><th>thunder</th><th>snow</th><th>windy</th><th>fog</th><th>sunshine</th><th>high temp</th><th>frost</th></tr>
             </table></details>
@@ -114,7 +114,7 @@
             <section><details><summary><h2>TOMORROW       (<span id="day1"></span>)</h2></summary>
             <p class="maxmin">Max: <span id="max1"></span>°C | Min: <span id="min1"></span>°C</p>
             <table id="hourly1"></table>
-            <details class="temp"><summary>Temperatures</summary>
+            <details class="temp"><summary>Temperatures (°C)</summary>
                 <table id="temp1">
                     <tr><th>time</th><th>temp.</th><th>feel</th><th>heat index</th><th>dew pt.</th></tr>
                 </table></details>
@@ -127,7 +127,7 @@
                 <table id="wind1">
                     <tr><th>time</th><th>speed</th><th colspan="2" style="padding-right: 0">direction</th><th>gust</th><th>chill</th></tr>
                 </table></details>
-            <details><summary>Chances</summary>
+            <details><summary>Chances (%)</summary>
                 <table id="chance1">
                     <tr><th>time</th><th>rain</th><th>overcast</th><th>thunder</th><th>snow</th><th>windy</th><th>fog</th><th>sunshine</th><th>high temp</th><th>frost</th></tr>
                 </table></details>
@@ -140,7 +140,7 @@
             <section><details><summary><h2>AFTER TOMORROW (<span id="day2"></span>)</h2></summary>
             <p class="maxmin">Max: <span id="max2"></span>°C | Min: <span id="min2"></span>°C</p>
             <table id="hourly2"></table>
-            <details class="temp"><summary>Temperatures</summary>
+            <details class="temp"><summary>Temperatures (°C)</summary>
                 <table id="temp2">
                     <tr><th>time</th><th>temp.</th><th>feel</th><th>heat index</th><th>dew pt.</th></tr>
                 </table></details>
@@ -153,7 +153,7 @@
                 <table id="wind2">
                     <tr><th>time</th><th>speed</th><th colspan="2" style="padding-right: 0">direction</th><th>gust</th><th>chill</th></tr>
                 </table></details>
-            <details><summary>Chances</summary>
+            <details><summary>Chances (%)</summary>
                 <table id="chance2">
                     <tr><th>time</th><th>rain</th><th>overcast</th><th>thunder</th><th>snow</th><th>windy</th><th>fog</th><th>sunshine</th><th>high temp</th><th>frost</th></tr>
                 </table></details>
