--- a/misc/folder/other/weather/index.html
+++ b/misc/folder/other/weather/index.html
@@ -56,7 +56,7 @@
             margin-left: 1em}
             details[open] > summary {list-style-type: '↓ ';}
 
-            .about{text-decoration: dotted; cursor: help;}
+            .about{text-decoration: underline dotted; cursor: help;}
             
 
             @media only screen and (max-width: 500px) {
