--- a/mante.html
+++ b/mante.html
@@ -24,8 +24,8 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 137 changes</li>
+                    <li><b>the motan:</b> 58 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>the motan:</b> 57 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
                     <li><b>jan Seli:</b> 16 changes</li>
                     <li><b>tabby:</b> 15 changes</li>
@@ -35,6 +35,7 @@
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>26/1:<b> <span style="cursor:help" title="suli.stln">mante.klp</span> </b><span class="name">the motan</span></li><br>
             <li>24/1:<b> <span style="cursor:help" title="home of The Machine">The Bureau</span> </b><span class="name">tabby</span></li><br>
             <li>21/1:<b> los papas fritos </b><span class="name">kulupu ko</span></li><br>
             <li>21/1:<b> los papas fritas </b><span class="name">kulupu ko</span></li><br>
