--- a/misc/folder/other/weather/index.html
+++ b/misc/folder/other/weather/index.html
@@ -89,7 +89,9 @@
 
             <section><details><summary><h2>TODAY          (<span id="day0"></span>)</h2></summary>
             <p class="maxmin">Max: <span id="max0"></span>°C | Min: <span id="min0"></span>°C</p>
-            <table id="hourly0"></table>
+            <table id="hourly0">
+                <tr><th>time</th><th>weather</th><th>temp.</th><th>rain</th></tr>
+            </table>
             <details class="temp"><summary>Temperatures (°C)</summary>
                 <table id="temp0">
                     <tr><th>time</th><th>temp.</th><th>feel</th><th class="about" title="percieved temperature in the shade, calculated using humidity and true temp">heat index</th><th class="about" title="the temp the air needs to be for water to condense; the optimal for comfort is 4 to 24.5°C">dew pt.</th></tr>
@@ -115,7 +117,9 @@
     
             <section><details><summary><h2>TOMORROW       (<span id="day1"></span>)</h2></summary>
             <p class="maxmin">Max: <span id="max1"></span>°C | Min: <span id="min1"></span>°C</p>
-            <table id="hourly1"></table>
+            <table id="hourly1">
+                <tr><th>time</th><th>weather</th><th>temp.</th><th>rain</th></tr>
+            </table>
             <details class="temp"><summary>Temperatures (°C)</summary>
                 <table id="temp1">
                     <tr><th>time</th><th>temp.</th><th>feel</th><th class="about" title="percieved temperature in the shade, calculated using humidity and true temp">heat index</th><th class="about" title="the temp the air needs to be for water to condense; the optimal for comfort is 4 to 24.5°C">dew pt.</th></tr>
@@ -141,7 +145,9 @@
 
             <section><details><summary><h2>AFTER TOMORROW (<span id="day2"></span>)</h2></summary>
             <p class="maxmin">Max: <span id="max2"></span>°C | Min: <span id="min2"></span>°C</p>
-            <table id="hourly2"></table>
+            <table id="hourly2">
+                <tr><th>time</th><th>weather</th><th>temp.</th><th>rain</th></tr>
+            </table>
             <details class="temp"><summary>Temperatures (°C)</summary>
                 <table id="temp2">
                     <tr><th>time</th><th>temp.</th><th>feel</th><th class="about" title="percieved temperature in the shade, calculated using humidity and true temp">heat index</th><th class="about" title="the temp the air needs to be for water to condense; the optimal for comfort is 4 to 24.5°C">dew pt.</th></tr>
