--- a/mante.html
+++ b/mante.html
@@ -19,7 +19,7 @@
     <main>
         <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
-                Also this is accurate to [25/1/2024] {as long as i can keep updating this and/or discord doesn't implode and mante still stands}<br>
+                Also this is accurate to as long as i can keep updating this and/or discord doesn't implode and mante still stands<br>
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
