--- a/buttons/index.html
+++ b/buttons/index.html
@@ -60,6 +60,7 @@
             <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabby"></a> 
             <a href="https://the-blob-system.neocities.org" class="button"><img src="https://the-blob-system.neocities.org/kulupu%20ko.png" alt="come to the wormliest place in the world, kulupu ko's website!"></a>
             <a href="https://motan.gay/" class="button" ><img src="https://motan.gay/images/button.png" alt="motan"></a> 
+            <a href="https://nyxnet.neocities.org" class="button"><img src="https://nyxnet.neocities.org/asset/btn.png" alt="nyxnet! ^o^"></a> 
             <a href="https://chiitopia.neocities.org" class="button"><img src="https://chiitopia.neocities.org/images/balls.png" alt="chii"></a> 
             <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi"></a> 
             <a href="https://temmiemew.neocities.org/" class="button"><img src="https://temmiemew.neocities.org/temmie-mew-button.png" alt="temmie mew"></a>
