--- a/mante.html
+++ b/mante.html
@@ -24,17 +24,21 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 137 changes</li>
-                    <li><b>the motan:</b> 58 changes</li>
+                    <li><b>the motan:</b> 60 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
+                    <li><b>tabby:</b> 17 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
                     <li><b>jan Seli:</b> 16 changes</li>
-                    <li><b>tabby:</b> 15 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>30/1:<b> car installation club (secret society) </b><span class="name">tabby</span></li><br>
+            <li>29/1:<b> water instilation club (secret society) </b><span class="name">the motan</span></li><br>
+            <li>28/1:<b> water distilation club (secret society) </b><span class="name">tabby</span></li><br>
+            <li>28/1:<b> a random joke </b><span class="name">the motan</span></li><br>
             <li>26/1:<b> <span style="cursor:help" title="suli.stln">mante.klp</span> </b><span class="name">the motan</span></li><br>
             <li>24/1:<b> <span style="cursor:help" title="home of The Machine">The Bureau</span> </b><span class="name">tabby</span></li><br>
             <li>21/1:<b> los papas fritos </b><span class="name">kulupu ko</span></li><br>
