--- a/mante.html
+++ b/mante.html
@@ -23,18 +23,23 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 139 changes</li>
-                    <li><b>the motan:</b> 60 changes</li>
+                    <li><b>kulupu ko:</b> 141 changes</li>
+                    <li><b>the motan:</b> 61 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 18 changes</li>
-                    <li><b>kala Asi:</b> 16 changes</li>
-                    <li><b>jan Seli:</b> 16 changes</li>
+                    <li><b>kala Asi:</b> 17 changes</li>
+                    <li><b>jan Seli:</b> 17 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>4/2:<b> life is su, i am fork </b><span class="name">kala Asi</span></li><br>
+            <li>4/2:<b> zendaya is meechee </b><span class="name">the motan</span></li><br>
+            <li>4/2:<b> tabby is goa </b><span class="name">kulupu ko</span></li><br>
+            <li>4/2:<b> mante </b><span class="name">jan Seli</span></li><br>
+            <li>4/2:<b> Migration by Illumination </b><span class="name">kulupu ko</span></li><br>
             <li>3/2:<b> the revolution is soon </b><span class="name">kulupu ko</span></li><br>
             <li>3/2:<b> tabby is the goat </b><span class="name">tabby</span></li><br>
             <li>1/2:<b> teeming with energy of the sun </b><span class="name">kulupu ko</span></li><br>
