--- a/misc/folder/mante/names.html
+++ b/misc/folder/mante/names.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <title>→ server names</title><style>
         body{--back: hsl(0, 0%, 3%);
         --text: #f0f0f0;
