--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -9,6 +9,7 @@
         --color: #5dcbfc}
         ::selection{background-color: #f6abb6}
         a::selection{background-color: var(--color)}
+        img{height: 1.25rem}
         </style></head>
     <body>
         <h1>every ma ante emoji*</h1>
@@ -16,6 +17,8 @@
     <main>
         <p>Currently, these are only the emojis currently in use, all the deleted ones are underway!<br>
             Also, this is a Lot of images, so your it might take a while to load it all<br>
-            mute ante li pali e lipu ni
+            mute ante li pali e lipu ni</p>
+
+        <div><h2>:83c:</h2><img src="sitelen/83c.png"></div>
     <main></body>
 </html>
