--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -9,7 +9,8 @@
         --color: #5dcbfc}
         ::selection{background-color: #f6abb6}
         a::selection{background-color: var(--color)}
-        img{height: 1.25rem}
+        h2::before{content: none}
+        img, h2{height: 1.25rem; display: inline-block; margin-right: 8px}
         </style></head>
     <body>
         <h1>every ma ante emoji*</h1>
@@ -20,5 +21,5 @@
             mute ante li pali e lipu ni</p>
 
         <div><h2>:83c:</h2><img src="sitelen/83c.png"></div>
-    <main></body>
+    </main></body>
 </html>
