--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -10,7 +10,8 @@
         ::selection{background-color: #f6abb6}
         a::selection{background-color: var(--color)}
         h2::before{content: none}
-        img, h2{height: 1.25rem; display: inline-block; margin-right: 8px}
+        img, h2{height: 1.25rem; display: inline-block; margin-right: 8px; color: #f6abb6}
+        .first, .last{color: #5dcbfc}
         </style></head>
     <body>
         <h1>every ma ante emoji*</h1>
@@ -20,6 +21,7 @@
             Also, this is a Lot of images, so your it might take a while to load it all<br>
             mute ante li pali e lipu ni</p>
 
-        <div><h2>:83c:</h2><img src="sitelen/83c.png"></div>
+        <div><h2>:83c:</h2><img src="sitelen/83c.png"><br>
+        <li><ul><b class="first">first use: </b>7/15/2023</ul></li></div>
     </main></body>
 </html>
