--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -12,7 +12,7 @@
         h2::before{content: none}
         img, h2{height: 1.25rem; display: inline-block; margin-right: 8px; color: #f6abb6}
         .first, .last{color: #5dcbfc}
-        ul{list-style-type: "→ ";}
+        ul{list-style-position: inside;}
         </style></head>
     <body>
         <h1>every ma ante emoji*</h1>
