--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -23,6 +23,6 @@
             mute ante li pali e lipu ni</p>
 
         <div><h2>:83c:</h2><img src="sitelen/83c.png"><br>
-        <li><ul><b class="first">first use: </b>7/15/2023</ul></li></div>
+        <p>- <b class="first">first use: </b>7/15/2023</p></div>
     </main></body>
 </html>
