--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -23,6 +23,14 @@
             mute ante li pali e lipu ni</p>
 
         <div><h2>:83c:</h2><img src="sitelen/83c.png"><br>
-        <p>- <b class="first">first use: </b>7/15/2023</p></div>
+        <p>- <b class="first">first use: </b>15/7/23</p></div>
+        <div><h2>:Angery:</h2><img src="sitelen/Angery.png"><br>
+        <p>- <b class="first">first use: </b>27/12/22</p></div>
+        <div><h2>:__:</h2><img src="sitelen/__.png"><br>
+        <p>- <b class="first">first use: </b>5/9/23</p></div>
+        <div><h2>:a_:</h2><img src="sitelen/a_.png"><br>
+        <p>- <b class="first">first use: </b>29/6/22</p></div>
+        <div><h2>:augh:</h2><img src="sitelen/augh.png"><br>
+        <p>- <b class="first">first use: </b>19/11/23</p></div>
     </main></body>
 </html>
