--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -22,15 +22,15 @@
             Also, this is a Lot of images, so your it might take a while to load it all<br>
             mute ante li pali e lipu ni</p>
 
-        <div><h2>:83c:</h2><img src="sitelen/83c.png"><br>
+        <div><img src="sitelen/83c.png"><h2>:83c:</h2><br>
         <p>- <b class="first">first use: </b>15/7/23</p></div>
-        <div><h2>:Angery:</h2><img src="sitelen/Angery.png"><br>
+        <div><img src="sitelen/Angery.png"><h2>:Angery:</h2><br>
         <p>- <b class="first">first use: </b>27/12/22</p></div>
-        <div><h2>:__:</h2><img src="sitelen/__.png"><br>
+        <div><img src="sitelen/nothing.png"><h2>:__:</h2><br>
         <p>- <b class="first">first use: </b>5/9/23</p></div>
-        <div><h2>:a_:</h2><img src="sitelen/a_.png"><br>
+        <div><img src="sitelen/a_.png"><h2>:a_:</h2><br>
         <p>- <b class="first">first use: </b>29/6/22</p></div>
-        <div><h2>:augh:</h2><img src="sitelen/augh.png"><br>
+        <div><img src="sitelen/augh.png"><h2>:augh:</h2><br>
         <p>- <b class="first">first use: </b>19/11/23</p></div>
     </main></body>
 </html>
