--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -11,6 +11,7 @@
         a::selection{background-color: var(--color)}
         h2::before{content: none}
         img, h2{height: 1.25rem; display: inline-block; margin-right: 8px; color: #f6abb6}
+        img{width: 1.25rem; object-fit: contain;}
         .first, .last{color: #5dcbfc}
         ul{list-style-position: inside;}
         </style></head>
