--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -33,5 +33,16 @@
         <p>- <b class="first">first use: </b>29/6/22</p></div>
         <div><img src="sitelen/augh.png"><h2>:augh:</h2><br>
         <p>- <b class="first">first use: </b>19/11/23</p></div>
+        <div><img src="sitelen/beast.png"><h2>:beast:</h2><br>
+        <p>- <b class="first">first use: </b>7/12/2023</p></div>
+        <div><img src="sitelen/biblically_accurate_sob.png"><h2>:biblically_accurate_sob:</h2><br>
+        <p>- <b class="first">first use: </b>20/08/23</p></div>
+        <div><img src="sitelen/bingus.png"><h2>:bingus:</h2><br>
+        <p>- <b class="first">first use: </b>22/07/22</p></div>
+        <div><img src="sitelen/blood_type_h.png"><h2>:blood_type_h:</h2><br>
+        <p>- <b class="first">first use: </b>21/09/22</p></div>
+        <div><img src="sitelen/blunder.png"><h2>:blunder:</h2><br>
+        <p>- <b class="first">first use: </b>10/09/23</p></div>
+        
     </main></body>
 </html>
