--- a/misc/folder/mante/emojis.html
+++ b/misc/folder/mante/emojis.html
@@ -34,15 +34,37 @@
         <div><img src="sitelen/augh.png"><h2>:augh:</h2><br>
         <p>- <b class="first">first use: </b>19/11/23</p></div>
         <div><img src="sitelen/beast.png"><h2>:beast:</h2><br>
-        <p>- <b class="first">first use: </b>7/12/2023</p></div>
+        <p>- <b class="first">first use: </b>7/12/23</p></div>
         <div><img src="sitelen/biblically_accurate_sob.png"><h2>:biblically_accurate_sob:</h2><br>
-        <p>- <b class="first">first use: </b>20/08/23</p></div>
+        <p>- <b class="first">first use: </b>20/8/23</p></div>
         <div><img src="sitelen/bingus.png"><h2>:bingus:</h2><br>
-        <p>- <b class="first">first use: </b>22/07/22</p></div>
+        <p>- <b class="first">first use: </b>22/7/22</p></div>
         <div><img src="sitelen/blood_type_h.png"><h2>:blood_type_h:</h2><br>
-        <p>- <b class="first">first use: </b>21/09/22</p></div>
+        <p>- <b class="first">first use: </b>21/9/22</p></div>
         <div><img src="sitelen/blunder.png"><h2>:blunder:</h2><br>
-        <p>- <b class="first">first use: </b>10/09/23</p></div>
+        <p>- <b class="first">first use: </b>10/9/23</p></div>
+        <div><img src="sitelen/bread.png"><h2>:bread:</h2><br>
+        <p>- <b class="first">first use: </b>24/9/23</p></div>
+        <div><img src="sitelen/brilliant.png"><h2>:brilliant:</h2><br>
+        <p>- <b class="first">first use: </b>10/9/23</p></div>
+        <div><img src="sitelen/ca.png"><h2>:ca:</h2><br>
+        <p>- <b class="first">first use: </b>10/9/23</p></div>
+        <div><img src="sitelen/canihavemod.png"><h2>:canihavemod:</h2><br>
+        <p>- <b class="first">first use: </b>11/7/23</p></div>
+        <div><img src="sitelen/catboom.gif"><h2>:catboom:</h2><br>
+        <p>- <b class="first">first use: </b>9/9/23</p></div>
+        <div><img src="sitelen/catponder.png"><h2>:catponder:</h2><br>
+        <p>- <b class="first">first use: </b>25/6/22</p></div>
+        <div><img src="sitelen/concerning.png"><h2>:concerning:</h2><br>
+        <p>- <b class="first">first use: </b>26/8/22</p></div>
+        <div><img src="sitelen/dab.png"><h2>:dab:</h2><br>
+        <p>- <b class="first">first use: </b>26/6/22</p></div>
+        <div><img src="sitelen/davestrider.png"><h2>:davestrider:</h2><br>
+        <p>- <b class="first">first use: </b>21/8/23</p></div>
+        <div><img src="sitelen/deepfriedwhat.png"><h2>:deepfriedwhat:</h2><br>
+        <p>- <b class="first">first use: </b>23/6/23</p></div>
+        <div><img src="sitelen/despair.png"><h2>:despair:</h2><br>
+        <p>- <b class="first">first use: </b>25/6/22</p></div>
         
     </main></body>
 </html>
