--- a/misc/folder/mante/names.html
+++ b/misc/folder/mante/names.html
@@ -24,9 +24,9 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 61 changes</li>
+                    <li><b>the motan:</b> 62 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 18 changes</li>
+                    <li><b>tabby:</b> 20 changes</li>
                     <li><b>kala Asi:</b> 17 changes</li>
                     <li><b>jan Seli:</b> 17 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
@@ -35,6 +35,9 @@
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>7/2:<b> honey i shrunk the tab </b><span class="name">tabby</span></li><br>
+            <li>7/2:<b> comically small laso </b><span class="name">the motan</span></li><br>
+            <li>5/2:<b> tiny laso tiny laso </b><span class="name">tabby</span></li><br>
             <li>4/2:<b> life is su, i am fork </b><span class="name">kala Asi</span></li><br>
             <li>4/2:<b> zendaya is meechee </b><span class="name">the motan</span></li><br>
             <li>4/2:<b> tabby is goa </b><span class="name">kulupu ko</span></li><br>
