--- a/misc/folder/mante/names.html
+++ b/misc/folder/mante/names.html
@@ -24,17 +24,20 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 62 changes</li>
+                    <li><b>the motan:</b> 63 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 20 changes</li>
+                    <li><b>tabby:</b> 21 changes</li>
+                    <li><b>jan Seli:</b> 18 changes</li>
                     <li><b>kala Asi:</b> 17 changes</li>
-                    <li><b>jan Seli:</b> 17 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>12/2:<b> ma fog pi ijo frog </b><span class="name">the motan</span></li><br>
+            <li>12/2:<b> ma fog pi ijo fog </b><span class="name">jan Seli</span></li><br>
+            <li>9/2:<b> not doing gang </b><span class="name">tabby</span></li><br>
             <li>7/2:<b> honey i shrunk the tab </b><span class="name">tabby</span></li><br>
             <li>7/2:<b> comically small laso </b><span class="name">the motan</span></li><br>
             <li>5/2:<b> tiny laso tiny laso </b><span class="name">tabby</span></li><br>
