--- a/misc/folder/mante/names.html
+++ b/misc/folder/mante/names.html
@@ -24,7 +24,7 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 63 changes</li>
+                    <li><b>the motan:</b> 64 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 21 changes</li>
                     <li><b>jan Seli:</b> 18 changes</li>
@@ -35,6 +35,7 @@
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>16/2:<b> ̅̅ </b><span class="name">the motan</span></li><br>
             <li>12/2:<b> ma fog pi ijo frog </b><span class="name">the motan</span></li><br>
             <li>12/2:<b> ma fog pi ijo fog </b><span class="name">jan Seli</span></li><br>
             <li>9/2:<b> not doing gang </b><span class="name">tabby</span></li><br>
