added corridor for now

--- a/misc/index.html
+++ b/misc/index.html
@@ -16,7 +16,8 @@
             You can barely make out the words "NO ENTRY" in thick lines, but it's been all
             scribbled over. You enter the room, and there's no one inside. The room smells
             of drywall, and is lit by a monochrome green light somehow. It's nauseating.
-            Before you, there is a desk with a thick folder and a notebook. It is beside a
+            Before you, there is a desk with a thick folder and a notebook. Right next to is is
+            a door, but it is locked, with a note saying "in the works" on it. Beside it is also a
             very scratched and at places dented wall, covered in sticky notes.
         </p>
         <nav class="subpages"><ul>
