--- a/misc/folder/mante/names.html
+++ b/misc/folder/mante/names.html
@@ -24,10 +24,10 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 64 changes</li>
+                    <li><b>the motan:</b> 67 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
                     <li><b>tabby:</b> 27 changes</li>
-                    <li><b>jan Seli:</b> 18 changes</li>
+                    <li><b>jan Seli:</b> 19 changes</li>
                     <li><b>kala Asi:</b> 17 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
@@ -35,6 +35,10 @@
                 <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name list 2024">
+            <li>2/4:<b> back to your regularly scheduled mante </b><span class="name">the motan</span></li><br>
+            <li>31/3:<b> ma ante pi ijo ante </b><span class="name">the motan</span></li><br>
+            <li>23/2:<b> nasin esipo </b><span class="name">jan Seli</span></li><br>
+            <li>19/3:<b> literally </b><span class="name">the motan</span></li><br>
             <li>15/3:<b> slavophones and ca </b><span class="name">tabby</span></li><br>
             <li>15/3:<b> slavophones and co </b><span class="name">tabby</span></li><br>
             <li>14/3:<b> ma pi </b><span class="name">tabby</span></li><br>
