--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../newstyle.css" rel="stylesheet" type="text/css" media="all">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>doodles{ibisPaint}</title><style>
         body {--back: white;
             --text: black;
-            --color: gray;}
+            --color: purple;}
         </style></head>
         <body><header>
-            <h1>ibisPaint</h1></header>
-            <nav class="top"><a href="../">back to doodles</a></nav>
+            <h1>ibisPaint</h1>
+            <nav class="top"><a href="../">back to doodles</a></nav></header>
         <main>
         <p>digital drawings made on my phone because i can't afford
             a drawing tablet oops<br>coincided a bit with anti-racism work so there's 
