--- a/doodles/14/index.html
+++ b/doodles/14/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../newstyle.css" rel="stylesheet" type="text/css" media="all">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>doodles{14}</title><style>
-        body{--back: #f0f0f0;
-            --text: #101010;
-            --color: #7c542b;}
+        body{--back: #101010;
+            --text: #e0e0e0;
+            --color: #ffba76;}
         </style></head>
-    <body>
+    <body><header>
         <h1>14</h1>
-        <nav class="top"><a href="../">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="../">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav></header>
     <main>
             <p>Currently the biggest notebook we have.</p>
         <div id="drawings">
