--- a/doodles/16/index.html
+++ b/doodles/16/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../newstyle.css" rel="stylesheet" type="text/css" media="all">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>doodles{16}</title><style>
-        body{--back: #9ea2a1;
-            --text: #101010;
-            --color: #404040;}
+        body{--back: #ccb184;
+            --text: #130e02;
+            --color: #005121}
         </style></head>
-    <body>
+    <body><header>
         <h1>16</h1>
-        <nav class="top"><a href="../">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="../">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav></header>
     <main>
             <p>Things started slowing down and i drew people less.</p>
         <div id="drawings">
